--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   cached_network_image: ^3.0.0
+  flutter_spinkit: "^4.1.2"
+  webview_flutter: ^2.0.7
 
 dev_dependencies:
   flutter_test:
